# software-correlator

./: .gitignore  CHANGES.md  Cargo.toml  README.md
.github/workflows/: publish.yml
context/: pfb_introduction.ipynb
src/: correlator.rs  lib.rs  main.rs  observation.rs  settings.rs  visibility.rs
test-data/: antenna_positions.json  mg-tana-raw.hdf
tests/: integration_test.rs
