[package]
name = "tart-correlator"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hdf5-reader = "0.6"
chrono = { version = "0.4", features = ["serde"] }
num-complex = "0.4"
rustfft = "6"
