[package]
name = "tart-correlator"
version = "0.4.0"
edition = "2024"
description = "Software correlator for the TART radio telescope"
license = "MIT"
repository = "https://github.com/tmolteno/TART"
homepage = "https://github.com/tmolteno/TART"
documentation = "https://github.com/tmolteno/TART"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hdf5-reader = "0.6"
chrono = { version = "0.4", features = ["serde"] }
num-complex = "0.4"
rustfft = "6"
rayon = "1"

[profile.release]
lto = true
